force-app/main/default/objects/TPE_Order__c/fields/AprovalDate__c.field-meta.xml
<CustomField>
    <fullName>AprovalDate__c</fullName>
    <label>AprovalDate</label>
    <type>Date</type>
</CustomField>