force-app/main/default/objects/TPE_Order__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Container__c.Reserved_By__c</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <filterItems>
            <field>Container__c.Available__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Container__c.Container__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>TPE Orders</relationshipLabel>
    <relationshipName>TPE_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>