force-app/main/default/objects/TPE_Order__c/fields/Delivery_Airport__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Airport__c</fullName>
    <label>Delivery Airport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>