force-app/main/default/objects/TPE_Order__c/fields/Estimated_Delivery_case__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_case__c</fullName>
    <formula>CASE( Transport__c , 

&apos;Sea&apos;,  ADDMONTHS( Transport_Start__c ,4) ,
 
&apos;Land&apos;, ADDMONTHS( Transport_Start__c ,2) ,

&apos;Air&apos;, ADDMONTHS( Transport_Start__c ,1) ,
 
  null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Delivery case</label>
    <type>Date</type>
</CustomField>