force-app/main/default/objects/TPE_Order__c/fields/NumberOfTenant__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTenant__c</fullName>
    <label>NumberOfTenant</label>
    <summaryForeignKey>Tenant_Order__c.TPE_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>