force-app/main/default/objects/TPE_Order__c/fields/Order_Locations__c.field-meta.xml
<CustomField>
    <fullName>Order_Locations__c</fullName>
    <label>Order Locations</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>