force-app/main/default/objects/TPE_Order__c/fields/Parsel_rentable__c.field-meta.xml
<CustomField>
    <fullName>Parsel_rentable__c</fullName>
    <formula>OR(ISPICKVAL( Type__c , &apos;General Purpose&apos;),ISPICKVAL( Type__c , &apos;Temperature Sensitive&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parsel rentable</label>
    <type>Checkbox</type>
</CustomField>