force-app/main/default/objects/TPE_Order__c/fields/Transport_Start__c.field-meta.xml
<CustomField>
    <fullName>Transport_Start__c</fullName>
    <label>Transport Start</label>
    <type>Date</type>
</CustomField>