force-app/main/default/objects/TPE_Order__c/recordTypes/Air.recordType-meta.xml
<RecordType>
    <fullName>Air</fullName>
    <active>true</active>
    <label>Air</label>
</RecordType>