force-app/main/default/objects/TPE_Order__c/validationRules/TransportStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TransportStartDate</fullName>
    <active>true</active>
    <description>Transport Start Date can not be in the past.</description>
    <errorConditionFormula>Transport_Start__c    &lt;    TODAY()</errorConditionFormula>
    <errorDisplayField>Transport_Start__c</errorDisplayField>
    <errorMessage>Transport Start Date can not be in the past.</errorMessage>
</ValidationRule>