force-app/main/default/objects/TPE_Order__c/validationRules/Transporttype.validationRule-meta.xml
<ValidationRule>
    <fullName>Transporttype</fullName>
    <active>true</active>
    <description>Transport Type field must not be empty.</description>
    <errorConditionFormula>ISBLANK( TEXT( Transport__c ) )</errorConditionFormula>
    <errorDisplayField>Transport__c</errorDisplayField>
    <errorMessage>Transport Type field must  be filled.</errorMessage>
</ValidationRule>